WP-9010 Fixes to the search at 1169-1199 the window was too wide.

--- a/css/style.css
+++ b/css/style.css
@@ -10898,7 +10898,7 @@ input.signup-submit:hover {
     display: none;
   }
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   #coveo-search-block-form,
   #coveo-search-block-form--2 {
     left: 50px;
@@ -10929,7 +10929,7 @@ input.signup-submit:hover {
   line-height: 1;
   padding: 6px 10px 6px 10px;
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   #coveo-search-block-form .form-item .form-text,
   #coveo-search-block-form--2 .form-item .form-text {
     height: 64px;
@@ -10942,7 +10942,7 @@ input.signup-submit:hover {
   display: none;
   height: 59px;
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   #coveo-search-block-form input,
   #coveo-search-block-form--2 input {
     display: block;
@@ -10966,7 +10966,7 @@ input.signup-submit:hover {
   height: 75px;
   top: 82px !important;
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   .page-exec-ed #coveo-search-block-form input, .page-seed #coveo-search-block-form input, .page-exec-ed
   #coveo-search-block-form--2 input, .page-seed
   #coveo-search-block-form--2 input {
@@ -11000,13 +11000,13 @@ input.signup-submit:hover {
 #coveo-search-block-form--2 .form-submit {
   display: inline-block;
 }
-@media (min-width: 73.125em) {
+@media (min-width: 75em) {
   #coveo-search-block-form .form-submit,
   #coveo-search-block-form--2 .form-submit {
     display: inline-block;
   }
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   #coveo-search-block-form .form-submit,
   #coveo-search-block-form--2 .form-submit {
     height: 64px;
@@ -11038,7 +11038,7 @@ input.signup-submit:hover {
     margin-top: 0;
   }
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   .page-exec-ed #coveo-search-block-form .form-submit, .page-exec-ed
   #coveo-search-block-form--2 .form-submit {
     height: 50px;
@@ -11060,7 +11060,7 @@ input.signup-submit:hover {
     width: 50px !important;
   }
 }
-@media (max-width: 73.0625em) {
+@media (max-width: 74.9375em) {
   .page-seed #coveo-search-block-form .form-submit, .page-seed
   #coveo-search-block-form--2 .form-submit {
     height: 50px;
